paging: prepare for paging
Signed-off-by: JunChao Sun <sunjunchao2870@gmail.com>

--- a/student-distrib/Makefile
+++ b/student-distrib/Makefile
@@ -22,7 +22,7 @@ OBJS+=$(patsubst %.c,%.o,$(filter %.c,$(SRC)))
 
 bootimg: Makefile $(OBJS)
 	rm -f bootimg
-	$(CC) $(LDFLAGS) $(OBJS) -Ttext=0x400000 -o bootimg
+	$(CC) $(LDFLAGS) $(OBJS) -Ttext=0x400000 -Tdata=0x500000 -Tbss=0x600000 -o bootimg
 	sudo ./debug.sh
 
 dep: Makefile.dep
